This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
7/27/19: Allowed focus positions to be set and editing in dummy version.

7/27/19: Fixing saving a focus position for near full-frame image from
non-square camera.

7/27/19: Shift T to turn on tilt series in a range can now ignore lower mag
maps in favor of higher mag ones at same stage position.

7/27/19: Fixes to waiting for drift: handled Trial binning properly for K2,
tested in script processor for task done.

7/27/19: Fixed enabling of emenu items to edit script above 20.

7/27/19: Added option to sip backlash in dose-symmetric series.  Fixed writing
of alignment command file after reordering file.

7/27/19: When testing if stage is at right place in a montage, wait and read
stage position again (In 3.7).

7/26/19: Made the message boxes in the New Map routine the kind that can close
valves and be suppressed by scripts (In 3.7).

7/18/19: Added ability to see focus area for current Navigator acquire item
on a View image and edit it with the mouse.

7/18/19: If there is a high-defocus mag calibration, the display of
Focus/Trial areas on a View image will now be adjusted for it.

7/18/19: Added Black - White and estimated image mean values to the image
display.

7/15/19: Added button to Navigator to save Focus area position as part of the
item for any item being acquired, so no state needs to be set.  The axis
rotation is also saved, as it is in a state now.

7/15/19: Started keeping track of overview binning for each montage that is
open so it isn't reset when switching between files.

7/13/19: Changed drift waiting task in various ways and integrated it into
tilt series operation.

7/13/19: When the low dose axis is free to rotate from the tilt axis, clicking