@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+7/28/19: Improved wait for stage done function on JEOL when either updating by
+event or not (In 3.7).
+
 7/27/19: Allowed focus positions to be set and editing in dummy version.
 
 7/27/19: Fixing saving a focus position for near full-frame image from
